@startuml
'https://plantuml.com/class-diagram

interface ShootStrategy {
    + {abstract} shootAction(AbstractAircraft abstractAircraft): List<BaseBullet>
}

class NoneShootStrategy {
    + shootAction(AbstractAircraft abstractAircraft): List<BaseBullet>
}

ShootStrategy <|.. NoneShootStrategy

class StraightShootStrategy {
    + shootAction(AbstractAircraft abstractAircraft): List<BaseBullet>
}

ShootStrategy <|.. StraightShootStrategy

class ScatterShootStrategy {
    + shootAction(AbstractAircraft abstractAircraft): List<BaseBullet>
}

ShootStrategy <|.. ScatterShootStrategy

class RingShootStrategy {
    + shootAction(AbstractAircraft abstractAircraft): List<BaseBullet>
}

ShootStrategy <|.. RingShootStrategy

abstract class AbstractAircraft
{
    - shootStrategy:ShootStrategy
    + AbstractAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + setShootStrategy(ShootStrategy shootStrategy):void
    + shoot():List<BaseBullet>
}

AbstractAircraft o--> ShootStrategy



@enduml